Moving to ConnId 1.5.1.0